--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
     <div class="upload-btn-wrapper">
         <div class="btn">Capture image</button>
-            <input type="file" id="recognize" accept="image/*" capture="capture">
+            <input type="file" id="recognize" accept="image/*" capture="camera">
         </div>
 
         <script>
