--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     }
                 }).then(function () {
 					//instead of alert we have to redirect to: 
-                    alert('succesfully matched' + id);
+                    alert('succesfully matched');
                 }, function (err) {
                     alert('No match');
                 }
