--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     }
                 }).then(function () {
 					//instead of alert we have to redirect to: 
-                    alert('succesfully matched' + {{ output }});
+                    alert('succesfully matched' + output);
                 }, function (err) {
-                    alert('No match' + {{ output }});
+                    alert('No match' + output);
                 }
                 )
             });
