--- a/index.html
+++ b/index.html
@@ -51,22 +51,18 @@
 
         <script>
             document.querySelector('#recognize').addEventListener('change', function () {
-                var getUrlParameter = function getUrlParameter(sParam) {
-				var sPageURL = window.location.search.substring(1),
-					sURLVariables = sPageURL.split('?'),
-					sParameterName,
-					i;
-
-				for (i = 0; i < sURLVariables.length; i++) {
-					sParameterName = sURLVariables[i].split('=');
-
-					if (sParameterName[0] === sParam) {
-						return sParameterName[1] === undefined ? true : decodeURIComponent(sParameterName[1]);
-					}
+                
+				function getQueryVariable(variable)
+				{
+					   var query = window.location.search.substring(1);
+					   var vars = query.split("?");
+					   for (var i=0;i<vars.length;i++) {
+							   var pair = vars[i].split("=");
+							   if(pair[0] == variable){return pair[1];}
+					   }
+					   return(false);
 				}
-			};
-				var id = GetURLParameter('id');
-
+				
 				// This is the file user has chosen
                 var formData = new FormData();
                 var imagefile = document.querySelector('#recognize');
@@ -77,7 +73,7 @@
                     }
                 }).then(function () {
 					//instead of alert we have to redirect to: 
-                    window.location = 'https://staging01.ipsosinteractive.com/surveys/?ci=bg-bg&pid=S18034492&routerID=0&supplierID=320&surveyid=496709&testCortex=1&id=' + id
+                    window.location = 'https://staging01.ipsosinteractive.com/surveys/?ci=bg-bg&pid=S18034492&routerID=0&supplierID=320&surveyid=496709&testCortex=1&id=' + getQueryVariable("id")
                 }, function (err) {
                     alert('No match');
                 }
