--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
                     }
                 }).then(function () {
 					//instead of alert we have to redirect to: 
-                    window.location = 'https://face-recognition-nodejsnew.herokuapp.com/?id='+getQueryVariable("id")+'&link=https://staging01.ipsosinteractive.com/surveys/?pid=S18034492&DoNotRedir1=1&skiprlvid=1&id=' + getQueryVariable("id")
-                }, function (err) {
+                    //window.location = 'https://face-recognition-nodejsnew.herokuapp.com/?id='+getQueryVariable("id")+'&link=https://staging01.ipsosinteractive.com/surveys/?pid=S18034492&DoNotRedir1=1&skiprlvid=1&id=' + getQueryVariable("id")
+					window.location = 'https://staging01.ipsosinteractive.com/surveys/?pid=S18034492&DoNotRedir1=1&skiprlvid=1&id=' + getQueryVariable("id")
+				}, function (err) {
                     alert('No match');
                 }
                 )
